# dpdk-itch5-feedhandler

./: CMakeLists.txt  README.md  benchmark_parser.txt  benchmark_ring_buffer.txt  generate_figures.py  test_results.txt
include/common/: endian.hpp  types.hpp
include/dpdk/: config.hpp  packet_handler.hpp
include/itch5/: messages.hpp  parser.hpp
include/moldudp64/: header.hpp  session.hpp
include/spsc/: ring_buffer.hpp
scripts/: itch_to_pcap.py  setup_dpdk_env.sh
src/: feed_handler.hpp  main.cpp
tests/: bench_parser.cpp  bench_ring_buffer.cpp  test_moldudp64.cpp  test_parser.cpp  test_ring_buffer.cpp
